# AI_Agents_for_Business_Applications_UT_Austin

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
agnetic_ai_foundation/project1/: Apple_HBR_Report_Project_Template.pptx  Learners_Notebook_Full_Code.ipynb  Learners_Notebook_Low_Code.ipynb
agnetic_ai_foundation/week1/: MLS_Week_2_Medical_Assistant.ipynb
agnetic_ai_foundation/week1/MLS/: MLS_Week_2_Medical_Assistant.ipynb
agnetic_ai_foundation/week1/extra/: LLM_Powered_Research_Assistant.ipynb
agnetic_ai_foundation/week1/lecture_notebooks/: AAPL-MDA.txt  Hands_on_RAG.ipynb
