[project]
name = "ai_biz_ut_austin"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=4.8.5",
    "faiss-cpu>=1.14.2",
    "huggingface-hub>=1.16.1",
    "ipykernel>=7.2.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-openai>=0.3.35",
    "llama-cpp-python==0.2.73",
    "notebook>=7.5.6",
    "openai>=2.38.0",
    "pandas>=2.3.3",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
]
