[project]
name = "ai_biz_ut_austin"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "chromadb==1.0.15",
    "datasets==4.0.0",
    "faiss-cpu>=1.14.2",
    "huggingface-hub>=1.16.1",
    "ipykernel>=7.2.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-openai==0.3.30",
    "llama-cpp-python==0.2.73",
    "notebook>=7.5.6",
    "openai>=1.99.9,<2.0.0",
    "pandas>=2.3.3",
    "pymupdf==1.26.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "tiktoken==0.9.0",
    "evaluate==0.4.5",
]
